k8s/mssql-product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-product
  template:
    metadata:
      labels:
        app: mssql-product
    spec:
      containers:
      - name: mssql-product
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql/data
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-product-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-product-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
