k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
