k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
          name: rmq-msg-port
        - containerPort: 15672
          name: rmq-mngmt-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rmq-mngmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rmq-mngmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
