k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regexp: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dencel.com
    secretName: certificate
  rules:
  - host: dencel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-clusterip-service
            port:
              number: 80
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product-clusterip-service
            port:
              number: 8080
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-clusterip-service
            port:
              number: 8080
      - path: /api/carts
        pathType: Prefix
        backend:
          service:
            name: cart-clusterip-service
            port:
              number: 8080
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-clusterip-service
            port:
              number: 8080
